might have fixed dark mode in safari

--- a/style.css
+++ b/style.css
@@ -72,6 +72,9 @@ body {
 
 
 @media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
   body {
     background: rgb(18, 18, 18);
     ;
